# vattenoverhuvudet

./: README.md  gmon.out  swag.cpp
cpp/OpenCLtest/: CMakeLists.txt  main.cpp  taskParallel.cl
cpp/OpenCLtest/cmakemodules/: FindOpenCL.cmake
cpp/SPH_cpp/: .gitignore  CMakeLists.txt  Particle.cpp  Particle.h  calculateForces.h  kernels.cpp  kernels.h  main.cpp
cpp/SPH_cpp/cmake/: FindOPENCL.cmake
cpp/SPH_cpp/include/: CppParticleSimulator.hpp  HeightMap.hpp  HeightMapData.hpp  OpenClParticleSimulator.hpp  Parameters.h  Parameters.hpp  Particle.h  ParticleSimulator.hpp  calculateForces.h  constants.hpp  kernels.h  opencl_context_info.hpp  sph_kernels.h
cpp/SPH_cpp/include/OpenCL/: .gitignore  OpenClParticleSimulator.hpp  clBoundsInfo.hpp  clFluidInfo.hpp  clParticle.hpp  clParticleData.hpp  clVoxelCell.hpp.in  clVoxelGridInfo.hpp  opencl_context_info.hpp
cpp/SPH_cpp/include/common/: FileReader.hpp  FluidInteraction.hpp  GLerror.hpp  MatrixStack.hpp  Rotator.hpp  image_util.hpp  stream_utils.hpp
cpp/SPH_cpp/include/math/: randomized.hpp
cpp/SPH_cpp/include/rendering/: ShaderProgram.hpp  VoxelGrid.hpp  texture.hpp
cpp/SPH_cpp/kernels/: .gitignore  calculate_forces.cl  calculate_voxel_grid.cl  integrate_particle_states.cl  move_particles_to_ogl.cl.in  populate_voxel_grid.cl  populate_voxel_grid.cl.in  simple_voxel_grid_move.cl  simulate_fluid_particles.cl  update_particle_positions.cl
cpp/SPH_cpp/kernels/configurable/: simulate_fluid_particles.cl
cpp/SPH_cpp/shaders/: compose.frag  curvatureflow.frag  heightmap.frag  heightmap.vert  liquidshade.frag  particledepth.frag  particles.frag  particles.geom  particles.tessCont.glsl  particles.tessEval.glsl  particles.vert  particlethickness.frag  particlevelocity.frag  quad.vert  simple.frag  simple.vert
cpp/SPH_cpp/src/: CppParticleSimulator.cpp  HeightMap.cpp  OpenClParticleSimulator.cpp  Parameters.cpp  Particle.cpp  calculateForces.cpp  kernels.cpp  sph_kernels.cpp
cpp/SPH_cpp/src/OpenCL/: OpenClParticleSimulator.cpp
cpp/SPH_cpp/src/common/: FileReader.cpp  MatrixStack.cpp  Rotator.cpp
cpp/SPH_cpp/src/rendering/: ShaderProgram.cpp  VoxelGrid.cpp  texture.cpp
docs/report/: report.tex
matlab/: .gitignore  SPH_first.m  calculateBoundaryForce.m  calculateCellDensities.m  calculateCellForces.m  calculateForces.m  calculateForcesGrid.m  checkBoundaries.m  drawParticles.m  performTimestep.m
matlab/kernels/: Wpoly6.m  Wspiky.m  Wviscosity.m  gradWpoly6.m  gradWspiky.m  laplacianWpoly6.m  laplacianWviscosity.m
